[gd_scene load_steps=18 format=3 uid="uid://dgd3od37gh5tj"]

[ext_resource type="Texture2D" uid="uid://755f0l2xp2fd" path="res://tileable-grass_clover_tt7010116-sample_1.png" id="1_q42ux"]
[ext_resource type="PackedScene" uid="uid://btagaxa4lbaug" path="res://player.tscn" id="2_wi0qq"]
[ext_resource type="PackedScene" uid="uid://c2efg3l7it3hb" path="res://enemy.tscn" id="3_s3q8p"]
[ext_resource type="Script" uid="uid://bqoccdbk63cf6" path="res://enemy.gd" id="4_u4kh1"]
[ext_resource type="PackedScene" uid="uid://b238rg270r11u" path="res://door.tscn" id="5_svivd"]
[ext_resource type="Script" uid="uid://c87uqclomdwjv" path="res://door.gd" id="6_yafm2"]
[ext_resource type="PackedScene" uid="uid://cf53qfm1efyio" path="res://key.tscn" id="7_46211"]
[ext_resource type="Script" uid="uid://d3qglabsfde1g" path="res://key.gd" id="8_t5hu4"]
[ext_resource type="PackedScene" uid="uid://d2ejs6ur4m8ql" path="res://button.tscn" id="9_eg35p"]
[ext_resource type="PackedScene" uid="uid://ddtf6gkk31sfk" path="res://lost.tscn" id="10_67vg4"]
[ext_resource type="Script" uid="uid://btda04lyiqq17" path="res://lost.gd" id="11_mqvtj"]
[ext_resource type="PackedScene" uid="uid://drulghqyrqivo" path="res://win.tscn" id="12_8swdu"]
[ext_resource type="Script" uid="uid://cnwibr6i1yrei" path="res://win.gd" id="13_xe1ru"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_q42ux"]
texture = ExtResource("1_q42ux")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0

[sub_resource type="TileSet" id="TileSet_wi0qq"]
tile_size = Vector2i(128, 128)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_q42ux")

[sub_resource type="LabelSettings" id="LabelSettings_q42ux"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_wi0qq"]
font_size = 50

[node name="level_3" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_wi0qq")
format = 2
layer_0/tile_data = PackedInt32Array(131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 196618, 0, 0, 262154, 0, 0, 196619, 0, 0, 262156, 0, 0, 327693, 0, 0, 393230, 0, 0, 1507342, 0, 0, 1507341, 0, 0, 1507340, 0, 0, 1507339, 0, 0, 1507338, 0, 0, 1572873, 0, 0, 1572872, 0, 0, 1572871, 0, 0, 1507335, 0, 0, 1507334, 0, 0, 1507333, 0, 0, 1507336, 0, 0, 1507337, 0, 0, 1507332, 0, 0, 1507331, 0, 0, 1507330, 0, 0, 1507329, 0, 0, 1507328, 0, 0, 1507343, 0, 0, 1507344, 0, 0, 1507345, 0, 0, 1507346, 0, 0, 1507347, 0, 0, 1507348, 0, 0, 1507349, 0, 0, 1507350, 0, 0, 1507351, 0, 0, 1507352, 0, 0, 1507353, 0, 0, 1507354, 0, 0, 1507355, 0, 0, 1507356, 0, 0, 1507357, 0, 0, 1507358, 0, 0, 1507359, 0, 0, 1507360, 0, 0, 1507361, 0, 0, 1507362, 0, 0, 1507363, 0, 0, 1507364, 0, 0, 1507365, 0, 0, 1507366, 0, 0, 1507367, 0, 0, 1507368, 0, 0, 1507369, 0, 0, 1507370, 0, 0, 1507371, 0, 0, 1507372, 0, 0, 1507373, 0, 0, 1507374, 0, 0, 1441838, 0, 0, 1376302, 0, 0, 1310766, 0, 0, 1245230, 0, 0, 1179694, 0, 0, 1179693, 0, 0, 1114157, 0, 0, 1048621, 0, 0, 983085, 0, 0, 1114158, 0, 0, 1048622, 0, 0, 983086, 0, 0, 1310754, 0, 0, 1376293, 0, 0, 1376294, 0, 0, 1376295, 0, 0, 1310753, 0, 0, 1310752, 0, 0, 1310751, 0, 0, 1245213, 0, 0, 1245212, 0, 0, 1245211, 0, 0, 1245210, 0, 0, 1245209, 0, 0, 1245208, 0, 0, 196607, 0, 0, 196606, 0, 0, 131070, 0, 0, 65534, 0, 0, -2, 0, 0, -65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131066, 0, 0, -131065, 0, 0, -131064, 0, 0, -131063, 0, 0, -131062, 0, 0, -131061, 0, 0, -131060, 0, 0, -131059, 0, 0, -131058, 0, 0, -131057, 0, 0, -131056, 0, 0, -131055, 0, 0, -131054, 0, 0, -131053, 0, 0, -131052, 0, 0, -131051, 0, 0, -131050, 0, 0, -131049, 0, 0, -65512, 0, 0, -65511, 0, 0, 26, 0, 0, 27, 0, 0, 65563, 0, 0, 65564, 0, 0, 131101, 0, 0, 131102, 0, 0, 196638, 0, 0, 196639, 0, 0, 262175, 0, 0, 262176, 0, 0, 327713, 0, 0, 327714, 0, 0, 393250, 0, 0, 393251, 0, 0, 458788, 0, 0, 458789, 0, 0, 524325, 0, 0, 524326, 0, 0, 589862, 0, 0, 589863, 0, 0, 655398, 0, 0, 655399, 0, 0, 720936, 0, 0, 720937, 0, 0, 786473, 0, 0, 786474, 0, 0, 786475, 0, 0, 852011, 0, 0, 852012, 0, 0, 917549, 0, 0, 917550, 0, 0, 983087, 0, 0, 1048623, 0, 0, 1114159, 0, 0, 1179695, 0, 0, 1245231, 0, 0, 1310767, 0, 0, 1376303, 0, 0, 1441839, 0, 0, 917551, 0, 0, 917552, 0, 0, 917553, 0, 0, 983089, 0, 0, 1048625, 0, 0, 1114161, 0, 0, 1179697, 0, 0, 1245233, 0, 0, 1310769, 0, 0, 1376305, 0, 0, 1441841, 0, 0, 1507377, 0, 0, 1507376, 0, 0, 1507375, 0, 0, 1441840, 0, 0, 1376304, 0, 0, 1310768, 0, 0, 1245232, 0, 0, 1179696, 0, 0, 1114160, 0, 0, 1048624, 0, 0, 983088, 0, 0, 1572864, 0, 0, 1572865, 0, 0, 1572866, 0, 0, 1572867, 0, 0, 1572868, 0, 0, 1572869, 0, 0, 1572870, 0, 0, 1572874, 0, 0, 1572875, 0, 0, 1572876, 0, 0, 1572877, 0, 0, 1572878, 0, 0, 1572879, 0, 0, 1572880, 0, 0, 1572881, 0, 0, 1572882, 0, 0, 1572883, 0, 0, 1572884, 0, 0, 1572885, 0, 0, 1572886, 0, 0, 1572887, 0, 0, 1572888, 0, 0, 1572889, 0, 0, 1572890, 0, 0, 1572891, 0, 0, 1572892, 0, 0, 1572893, 0, 0, 1572894, 0, 0, 1572895, 0, 0, 1572896, 0, 0, 1572897, 0, 0, 1572898, 0, 0, 1572899, 0, 0, 1572900, 0, 0, 1572901, 0, 0, 1572902, 0, 0, 1572903, 0, 0, 1572904, 0, 0, 1572905, 0, 0, 1572906, 0, 0, 1572907, 0, 0, 1572908, 0, 0, 1572909, 0, 0, 1572910, 0, 0, 1572911, 0, 0, 1572912, 0, 0, 1572913, 0, 0, 1638449, 0, 0, 1638448, 0, 0, 1638447, 0, 0, 1638446, 0, 0, 1638445, 0, 0, 1638444, 0, 0, 1638443, 0, 0, 1638442, 0, 0, 1638441, 0, 0, 1638440, 0, 0, 1638439, 0, 0, 1638438, 0, 0, 1638437, 0, 0, 1638436, 0, 0, 1638435, 0, 0, 1638434, 0, 0, 1638433, 0, 0, 1638432, 0, 0, 1638431, 0, 0, 1638430, 0, 0, 1638429, 0, 0, 1638428, 0, 0, 1638427, 0, 0, 1638426, 0, 0, 1638425, 0, 0, 1638424, 0, 0, 1638423, 0, 0, 1703959, 0, 0, 1703958, 0, 0, 1703957, 0, 0, 1703956, 0, 0, 1703955, 0, 0, 1703954, 0, 0, 1703953, 0, 0, 1703952, 0, 0, 1703951, 0, 0, 1703950, 0, 0, 1703949, 0, 0, 1703948, 0, 0, 1703947, 0, 0, 1638411, 0, 0, 1638400, 0, 0, 1703936, 0, 0, 1703937, 0, 0, 1703938, 0, 0, 1703939, 0, 0, 1703940, 0, 0, 1703941, 0, 0, 1703942, 0, 0, 1769479, 0, 0, 1769480, 0, 0, 1769481, 0, 0, 1769482, 0, 0, 1769483, 0, 0, 1769484, 0, 0, 1769485, 0, 0, 1769486, 0, 0, 1769487, 0, 0, 1769488, 0, 0, 1769489, 0, 0, 1769490, 0, 0, 1769491, 0, 0, 1769492, 0, 0, 1769493, 0, 0, 1769494, 0, 0, 1769495, 0, 0, 1769496, 0, 0, 1769478, 0, 0, 1769477, 0, 0, 1769476, 0, 0, 1769475, 0, 0, 1769474, 0, 0, 1769473, 0, 0, 1769472, 0, 0, 1638401, 0, 0, 1638402, 0, 0, 1638403, 0, 0, 1638404, 0, 0, 1638405, 0, 0, 1638406, 0, 0, 1638407, 0, 0, 1638408, 0, 0, 1638409, 0, 0, 1638410, 0, 0, 1703946, 0, 0, 1703945, 0, 0, 1703944, 0, 0, 1703943, 0, 0, 1638412, 0, 0, 1638413, 0, 0, 1638414, 0, 0, 1638420, 0, 0, 1638421, 0, 0, 1638422, 0, 0, 1638415, 0, 0, 1638416, 0, 0, 1638417, 0, 0, 1638418, 0, 0, 1638419, 0, 0, 1769497, 0, 0, 1769498, 0, 0, 1769499, 0, 0, 1769500, 0, 0, 1769501, 0, 0, 1769502, 0, 0, 1769503, 0, 0, 1769504, 0, 0, 1769505, 0, 0, 1769506, 0, 0, 1769507, 0, 0, 1769508, 0, 0, 1769509, 0, 0, 1769510, 0, 0, 1769511, 0, 0, 1769512, 0, 0, 1769513, 0, 0, 1769514, 0, 0, 1769515, 0, 0, 1769516, 0, 0, 1769517, 0, 0, 1769518, 0, 0, 1769519, 0, 0, 1769520, 0, 0, 1769521, 0, 0, 1703985, 0, 0, 1703980, 0, 0, 1703979, 0, 0, 1703978, 0, 0, 1703977, 0, 0, 1703976, 0, 0, 1703975, 0, 0, 1703974, 0, 0, 1703973, 0, 0, 1703969, 0, 0, 1703968, 0, 0, 1703967, 0, 0, 1703966, 0, 0, 1703965, 0, 0, 1703964, 0, 0, 1703963, 0, 0, 1703962, 0, 0, 1703961, 0, 0, 1703960, 0, 0, 1703981, 0, 0, 1703982, 0, 0, 1703983, 0, 0, 1703984, 0, 0, 1703972, 0, 0, 1703971, 0, 0, 1703970, 0, 0, 1835007, 0, 0, 1835006, 0, 0, 1835005, 0, 0, 1835004, 0, 0, 1769468, 0, 0, 1703932, 0, 0, 1703931, 0, 0, 1638395, 0, 0, 1572859, 0, 0, 1572860, 0, 0, 1507324, 0, 0, 1441788, 0, 0, 1376252, 0, 0, 1376253, 0, 0, 1376251, 0, 0, 1441787, 0, 0, 1507323, 0, 0, 1769467, 0, 0, 1835003, 0, 0, 1769469, 0, 0, 1769470, 0, 0, 1769471, 0, 0, 1703935, 0, 0, 1703934, 0, 0, 1703933, 0, 0, 1638396, 0, 0, 1572861, 0, 0, 1638397, 0, 0, 1638398, 0, 0, 1638399, 0, 0, 1572863, 0, 0, 1376255, 0, 0, 1376254, 0, 0, 1572862, 0, 0, 1310715, 0, 0, 1245179, 0, 0, 1179643, 0, 0, 1114107, 0, 0, 1048571, 0, 0, 983035, 0, 0, 917499, 0, 0, 851963, 0, 0, 786427, 0, 0, 720891, 0, 0, 655355, 0, 0, 589819, 0, 0, 524283, 0, 0, 458747, 0, 0, 393211, 0, 0, 327675, 0, 0, 262139, 0, 0, 196603, 0, 0, -65541, 0, 0, -65540, 0, 0, -65539, 0, 0, -3, 0, 0, 65533, 0, 0, 131069, 0, 0, 65532, 0, 0, -4, 0, 0, -5, 0, 0, 65531, 0, 0, 131067, 0, 0, 196604, 0, 0, 131068, 0, 0, 262140, 0, 0, 327676, 0, 0, 393212, 0, 0, 458748, 0, 0, 524284, 0, 0, 589820, 0, 0, 655356, 0, 0, 720892, 0, 0, 786428, 0, 0, 851964, 0, 0, 917500, 0, 0, 983036, 0, 0, 655357, 0, 0, 589821, 0, 0, 524285, 0, 0, 458749, 0, 0, 393214, 0, 0, 327678, 0, 0, 262143, 0, 0, 262142, 0, 0, 262141, 0, 0, 196605, 0, 0, 327677, 0, 0, 393213, 0, 0, 720893, 0, 0, 786429, 0, 0, 851965, 0, 0, 917501, 0, 0, 983037, 0, 0, 524286, 0, 0, 458750, 0, 0, 393215, 0, 0, 327679, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 196617, 0, 0, 196616, 0, 0, 262144, 0, 0, 458751, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 262150, 0, 0, 262149, 0, 0, 262148, 0, 0, 262147, 0, 0, 262146, 0, 0, 262145, 0, 0, 524287, 0, 0, 589823, 0, 0, 655359, 0, 0, 720894, 0, 0, 786430, 0, 0, 851966, 0, 0, 917502, 0, 0, 655358, 0, 0, 589822, 0, 0, 458752, 0, 0, 458753, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 327688, 0, 0, 327689, 0, 0, 393222, 0, 0, 393221, 0, 0, 458755, 0, 0, 458754, 0, 0, 524290, 0, 0, 524289, 0, 0, 589825, 0, 0, 589824, 0, 0, 524288, 0, 0, 393223, 0, 0, 393224, 0, 0, 393217, 0, 0, 393216, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 524296, 0, 0, 524295, 0, 0, 589831, 0, 0, 589830, 0, 0, 655365, 0, 0, 655364, 0, 0, 720899, 0, 0, 786435, 0, 0, 786434, 0, 0, 851969, 0, 0, 917504, 0, 0, 983040, 0, 0, 1114111, 0, 0, 1048575, 0, 0, 917505, 0, 0, 851970, 0, 0, 720900, 0, 0, 589829, 0, 0, 589828, 0, 0, 589827, 0, 0, 589826, 0, 0, 655362, 0, 0, 655361, 0, 0, 720897, 0, 0, 655363, 0, 0, 524294, 0, 0, 524293, 0, 0, 524291, 0, 0, 524292, 0, 0, 720898, 0, 0, 786433, 0, 0, 983041, 0, 0, 1048577, 0, 0, 1114112, 0, 0, 1179648, 0, 0, 1245183, 0, 0, 1179647, 0, 0, 983039, 0, 0, 917503, 0, 0, 851967, 0, 0, 786431, 0, 0, 720895, 0, 0, 655360, 0, 0, 720896, 0, 0, 786432, 0, 0, 851968, 0, 0, 1048576, 0, 0, 1245182, 0, 0, 1245181, 0, 0, 1310717, 0, 0, 1310716, 0, 0, 1245180, 0, 0, 1179644, 0, 0, 1114108, 0, 0, 1048572, 0, 0, 1048573, 0, 0, 1048574, 0, 0, 983038, 0, 0, 1114110, 0, 0, 1179646, 0, 0, 1179645, 0, 0, 1114109, 0, 0, 1310719, 0, 0, 1310718, 0, 0, 1179649, 0, 0, 1245184, 0, 0, 458765, 0, 0, 393229, 0, 0, 327690, 0, 0, 327691, 0, 0, 393228, 0, 0, 327692, 0, 0, 262155, 0, 0, 393226, 0, 0, 393227, 0, 0, 458763, 0, 0, 524299, 0, 0, 589835, 0, 0, 655369, 0, 0, 589833, 0, 0, 524297, 0, 0, 458761, 0, 0, 393225, 0, 0, 589834, 0, 0, 655370, 0, 0, 524298, 0, 0, 458762, 0, 0, 524300, 0, 0, 458764, 0, 0, 917510, 0, 0, 917509, 0, 0, 851973, 0, 0, 786437, 0, 0, 720901, 0, 0, 589832, 0, 0, 655368, 0, 0, 720904, 0, 0, 786440, 0, 0, 720905, 0, 0, 720903, 0, 0, 655367, 0, 0, 655366, 0, 0, 720902, 0, 0, 786438, 0, 0, 786439, 0, 0, 851975, 0, 0, 851974, 0, 0, 1048580, 0, 0, 1048579, 0, 0, 1048578, 0, 0, 917506, 0, 0, 851971, 0, 0, 851972, 0, 0, 786436, 0, 0, 917507, 0, 0, 983042, 0, 0, 983043, 0, 0, 917508, 0, 0, 983045, 0, 0, 983044, 0, 0, 1114114, 0, 0, 1114113, 0, 0, 1114115, 0, 0, 1441833, 0, 0, 1441834, 0, 0, 1310714, 0, 0, 1376250, 0, 0, 1441786, 0, 0, 1507322, 0, 0, 1572858, 0, 0, 1638394, 0, 0, 1245178, 0, 0, 1245177, 0, 0, 1310713, 0, 0, 1376249, 0, 0, 1441785, 0, 0, 1507321, 0, 0, 1572857, 0, 0, 1638393, 0, 0, 1703930, 0, 0, 1703929, 0, 0, 1703928, 0, 0, 1638392, 0, 0, 1572856, 0, 0, 1572855, 0, 0, 1507319, 0, 0, 1441783, 0, 0, 1441784, 0, 0, 1376248, 0, 0, 1310712, 0, 0, 1245176, 0, 0, 1245175, 0, 0, 1310711, 0, 0, 1376247, 0, 0, 1638391, 0, 0, 1703927, 0, 0, 1507320, 0, 0, 1179650, 0, 0, 1245185, 0, 0, 1310720, 0, 0, 1310756, 0, 0, 1310755, 0, 0, 1376298, 0, 0, 1441835, 0, 0, 1245201, 0, 0, 1245202, 0, 0, 1245203, 0, 0, 1245204, 0, 0, 1245205, 0, 0, 1245206, 0, 0, 1245207, 0, 0, 1245200, 0, 0, 1179663, 0, 0, 1114126, 0, 0, 1048589, 0, 0, 1048588, 0, 0, 1048587, 0, 0, 983050, 0, 0, 983049, 0, 0, 1310764, 0, 0, 1245225, 0, 0, 1310763, 0, 0, 1376286, 0, 0, 1441820, 0, 0, 0, 0, 0, 65536, 0, 0, 131071, 0, 0, 65535, 0, 0, -1, 0, 0, -65536, 0, 0)

[node name="Player" parent="." instance=ExtResource("2_wi0qq")]
position = Vector2(352, 224)

[node name="enemy" parent="." instance=ExtResource("3_s3q8p")]
position = Vector2(160, 224)
scale = Vector2(1, 1)
script = ExtResource("4_u4kh1")

[node name="door" parent="." instance=ExtResource("5_svivd")]
position = Vector2(5816, 2817)
script = ExtResource("6_yafm2")

[node name="key" parent="." instance=ExtResource("7_46211")]
position = Vector2(-320, 2876)
script = ExtResource("8_t5hu4")

[node name="door_label" type="Label" parent="key"]
offset_left = 896.0
offset_top = -148.0
offset_right = 1124.0
offset_bottom = -37.0
text = "DOOR ------>"
label_settings = SubResource("LabelSettings_q42ux")
horizontal_alignment = 1
vertical_alignment = 1

[node name="key_label" type="Label" parent="key"]
offset_left = 2408.0
offset_top = -1924.0
offset_right = 2592.0
offset_bottom = -1813.0
text = "<------ KEY"
label_settings = SubResource("LabelSettings_q42ux")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" parent="." instance=ExtResource("9_eg35p")]

[node name="lost" parent="." instance=ExtResource("10_67vg4")]
script = ExtResource("11_mqvtj")

[node name="win" parent="." instance=ExtResource("12_8swdu")]
script = ExtResource("13_xe1ru")

[node name="label3" type="Label" parent="."]
offset_left = 504.0
offset_top = 72.0
offset_right = 687.0
offset_bottom = 141.0
text = "LEVEL 3"
label_settings = SubResource("LabelSettings_wi0qq")

[node name="hint_label" type="Label" parent="."]
offset_left = 1488.0
offset_top = 1872.0
offset_right = 1856.0
offset_bottom = 1895.0
text = "You do not need to go to the keys direction first"

[connection signal="lose" from="Player" to="enemy" method="_on_player_lose"]
[connection signal="lose" from="Player" to="lost" method="_on_player_lose"]
[connection signal="win" from="Player" to="enemy" method="_on_player_win"]
[connection signal="win" from="Player" to="win" method="_on_player_win"]
[connection signal="lose" from="enemy" to="Player" method="_on_enemy_lose"]
[connection signal="lose" from="enemy" to="lost" method="_on_enemy_lose"]
[connection signal="body_entered" from="door" to="Player" method="_on_door_body_entered"]
[connection signal="body_entered" from="key" to="enemy" method="_on_key_body_entered"]
[connection signal="body_entered" from="key" to="door" method="_on_key_body_entered"]
[connection signal="body_entered" from="key" to="key" method="_on_body_entered"]
[connection signal="body_entered" from="key" to="win" method="_on_key_body_entered"]
[connection signal="start_game" from="Button" to="Player" method="_on_button_start_game"]
[connection signal="start_game" from="Button" to="enemy" method="_on_button_start_game"]
[connection signal="start_game" from="Button" to="lost" method="_on_button_start_game"]
